# src/routes/middlewares/user.js
@@ -1,19 +1,20 @@
 const { check } = require("express-validator");
-const moment_tz = require("moment-timezone");
 const constants = require("../../constants");
 
 class UserMiddleware {
   validate(method) {
     switch (method) {
-      case constants.VALIDATIONS.CREATE: {
+      case constants.VALIDATIONS.REGISTER: {
         return [
-          check("name", "Missing name").exists(),
+          check("company_id", "Missing company_id").exists(),
+          check("company_id", "Invalid company_id").isInt(),
+          check("username", "Missing username").exists(),
+          check("first_name", "Missing first_name").exists(),
+          check("last_name", "Missing last_name").exists(),
+          check("address", "Missing address").exists(),
+          check("address2", "Missing address2").exists(),
           check("email", "Missing email").exists(),
           check("email", "Invalid email").isEmail(),
-          check("phone_number", "Missing phone_number").exists(),
-          check("phone_number", "Invalid phone_number").isInt(),
-          check("country_code", "Missing country_code").exists(),
-          check("country_code", "Invalid country_code").isInt(),
           check("password", "missing password").exists(),
           check("confirm_password").custom((value, { req }) => {
             if (value === req.body.password) {
@@ -23,14 +24,34 @@ class UserMiddleware {
           }),
           check(
             "password",
-            "password doesn`t meet the password complexity policy"
+            "password doesn`t meet the password complexity policy (min 5, max 15)"
           ).isLength({ min: 5, max: 15 }),
-          check("timezone").custom((value, { req }) => {
-            if (!req.body.timezone || moment_tz.tz.zone(req.body.timezone)) {
+        ];
+      }
+      case constants.VALIDATIONS.UPDATE: {
+        return [
+          check("first_name", "Missing first_name").exists(),
+          check("last_name", "Missing last_name").exists(),
+          check("address", "Missing address").exists(),
+          check("address2", "Missing address2").exists(),
+          check("email", "Missing email").exists(),
+          check("email", "Invalid email").isEmail(),
+        ];
+      }
+      case constants.VALIDATIONS.RESET_PASSWORD: {
+        return [
+          check("username", "Missing username").exists(),
+          check("password", "missing password").exists(),
+          check("confirm_password").custom((value, { req }) => {
+            if (value === req.body.password) {
               return true;
             }
-            throw new Error("invalid timezone");
+            throw new Error("confirm_password does not match password");
           }),
+          check(
+            "password",
+            "password doesn`t meet the password complexity policy (min 5, max 15)"
+          ).isLength({ min: 5, max: 15 }),
         ];
       }
     }
