# src/routes/user.js
@@ -1,10 +1,28 @@
 const express = require("express");
 const router = express.Router();
+const constants = require("../constants");
 const authMiddleware = require("./middlewares/auth");
+const userMiddleware = require("./middlewares/user");
 const userController = require("../controllers/user");
 
+router.post(
+  "/",
+  userMiddleware.validate(constants.VALIDATIONS.REGISTER),
+  userController.register
+);
+router.put(
+  "/",
+  (req, res, next) => authMiddleware.verifyToken(req, res, next),
+  userMiddleware.validate(constants.VALIDATIONS.UPDATE),
+  userController.update
+);
+router.put(
+  "/reset-password",
+  userMiddleware.validate(constants.VALIDATIONS.RESET_PASSWORD),
+  userController.resetPassword
+);
 router.get(
-  "/info",
+  "/",
   (req, res, next) => authMiddleware.verifyToken(req, res, next),
   userController.getInfo
 );
